--- a/packetbeat/docs/fields.asciidoc
+++ b/packetbeat/docs/fields.asciidoc
@@ -25,7 +25,7 @@ grouped in the following categories:
 * <<exported-fields-host-processor>>
 * <<exported-fields-http>>
 * <<exported-fields-icmp>>
-* <<exported-fields-jolokia>>
+* <<exported-fields-jolokia-autodiscover>>
 * <<exported-fields-kubernetes-processor>>
 * <<exported-fields-memcache>>
 * <<exported-fields-mongodb>>
@@ -5686,7 +5686,7 @@ The response code.
 
 --
 
-[[exported-fields-jolokia]]
+[[exported-fields-jolokia-autodiscover]]
 == Jolokia Discovery autodiscover provider fields
 
 Metadata from Jolokia Discovery added by the jolokia provider.
