--- a/heartbeat/docs/fields.asciidoc
+++ b/heartbeat/docs/fields.asciidoc
@@ -20,7 +20,7 @@ grouped in the following categories:
 * <<exported-fields-host-processor>>
 * <<exported-fields-http>>
 * <<exported-fields-icmp>>
-* <<exported-fields-jolokia>>
+* <<exported-fields-jolokia-autodiscover>>
 * <<exported-fields-kubernetes-processor>>
 * <<exported-fields-process>>
 * <<exported-fields-resolve>>
@@ -3710,7 +3710,7 @@ Duration in microseconds
 
 --
 
-[[exported-fields-jolokia]]
+[[exported-fields-jolokia-autodiscover]]
 == Jolokia Discovery autodiscover provider fields
 
 Metadata from Jolokia Discovery added by the jolokia provider.
