--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -36,7 +36,7 @@ grouped in the following categories:
 * <<exported-fields-host-processor>>
 * <<exported-fields-http>>
 * <<exported-fields-jolokia>>
-* <<exported-fields-jolokia>>
+* <<exported-fields-jolokia-autodiscover>>
 * <<exported-fields-kafka>>
 * <<exported-fields-kibana>>
 * <<exported-fields-kubernetes-processor>>
@@ -11697,6 +11697,20 @@ server
 
 
 [[exported-fields-jolokia]]
+== Jolokia fields
+
+Jolokia module
+
+
+
+[float]
+== jolokia fields
+
+jolokia contains metrics exposed via jolokia agent
+
+
+
+[[exported-fields-jolokia-autodiscover]]
 == Jolokia Discovery autodiscover provider fields
 
 Metadata from Jolokia Discovery added by the jolokia provider.
@@ -11772,20 +11786,6 @@ Whether the agent was configured for authentication or not.
 
 
 --
-
-[[exported-fields-jolokia]]
-== Jolokia fields
-
-Jolokia module
-
-
-
-[float]
-== jolokia fields
-
-jolokia contains metrics exposed via jolokia agent
-
-
 
 [[exported-fields-kafka]]
 == Kafka fields
