--- a/libbeat/docs/release.asciidoc
+++ b/libbeat/docs/release.asciidoc
@@ -8,9 +8,14 @@ This section summarizes the changes in each release. Also read
 <<breaking-changes>> for more detail about changes that affect
 upgrade.
 
+* <<release-notes-7.0.0-rc1>>
 * <<release-notes-7.0.0-beta1>>
 * <<release-notes-7.0.0-alpha2>>
 * <<release-notes-7.0.0-alpha1>>
+* <<release-notes-6.7.0>>
+* <<release-notes-6.6.2>>
+* <<release-notes-6.6.1>>
+* <<release-notes-6.6.0>>
 * <<release-notes-6.5.4>>
 * <<release-notes-6.5.3>>
 * <<release-notes-6.5.2>>
