Cherry-pick #11032 to 7.0: Add default timeouts to metricbeat HTTP helpers (#11319)
Set a default request timeout of 10 seconds to metricbeat HTTP helpers
so there are less chances of leaking established connections.

Add a connection timeout that defaults to two seconds so connections
fail fast in case of network connectivity problems.

(cherry picked from commit 1cdc88b876b5adb695f759525368db2b1d21a437)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -23,6 +23,8 @@ https://github.com/elastic/beats/compare/v7.0.0-rc1...master[Check the HEAD diff
 
 *Metricbeat*
 
+- Add connection and request timeouts for HTTP helper. {pull}11032[11032]
+
 *Packetbeat*
 
 *Winlogbeat*
