work in progress

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -8882,13 +8882,30 @@ iis module
 
 
 [float]
-== system fields
+== webserver fields
 
-system
+webserver
 
 
 
-*`iis.system.example`*::
+*`iis.webserver.example`*::
++
+--
+type: keyword
+
+Example field
+
+
+--
+
+[float]
+== website fields
+
+website
+
+
+
+*`iis.website.example`*::
 +
 --
 type: keyword
